# light_evader

./: Cargo.toml  README  README.md  build_and_deploy.sh  build_linux_pc.sh  build_pc.sh  build_windows.sh
Data/: READTHIS.txt  high_score.scs
Data/high_score/: high_score.scs
src/: main.rs  read_score.rs  save_score.rs  ui_manager.rs
