[package]
name = "light_evader" # Will keep it like this for now
version = "0.1.0" # Not sure if I should change it
edition = "2021" 

[dependencies]
macroquad = "0.4.0" # Adding the macroquad library itself
rand = "0.8.5" # Random number generator

[dependencies.getrandom] # So it would be compatable on the web which I am not sure if I will add
version = "0.2"
features = ["js"]
